# ppnn

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_INSTRUCTIONS.md  pyproject.toml
experiments/: README_experiment.md  fast_gmm.py  run_all.py  run_dim_scaling.py
ppnn/: __init__.py  core.py  estimators.py
