[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppnn"
version = "0.1.0"
description = "Projection-Pursuit Nearest Neighbors: scikit-learn-compatible distributional-neighborhood estimators based on phi-divergence projection pursuit."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Touboul Jacques", email = "Jack_touboul@hotmail.com"}
]
keywords = ["statistics", "machine-learning", "nearest-neighbors", "projection-pursuit", "phi-divergence", "robust-statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]
benchmark = ["pandas>=1.3", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/TouboulJ/ppnn"
Repository = "https://github.com/TouboulJ/ppnn"
Issues = "https://github.com/TouboulJ/ppnn/issues"
Documentation = "https://github.com/TouboulJ/ppnn#readme"

[tool.setuptools.packages.find]
include = ["ppnn*"]
exclude = ["experiments*", "docs*"]
